# FunkinEditor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: commit.yaml
funkin/cmake/: thread_desc_compat.h
funkin/cmake/compat/: win32_thread_desc_compat.h
funkin/include/app/: app.hpp  debug.hpp
funkin/include/input/: input.hpp  input_binding.hpp  input_deadzone.hpp  input_map.hpp  input_ring_buffer.hpp  input_state.hpp  input_types.hpp
funkin/include/render/: render_viewport.hpp
funkin/include/render/gfx/: vk_context.hpp  vk_render.hpp
funkin/include/render/graphics/: gfx_context.hpp  gfx_device.hpp  gfx_render.hpp  gfx_surface.hpp  gfx_viewport.hpp  graphics_context.hpp  graphics_device.hpp  graphics_viewport.hpp
funkin/include/render/qt/: vk_surface.hpp  vk_viewport.hpp
funkin/include/utils/: log.hpp  pch.hpp
funkin/installer/: installer.iss
funkin/qt/qml/: main.qml
funkin/qt/qrc/: main.qrc
funkin/src/: main.cpp
funkin/src/app/: app.cpp  debug.cpp
funkin/src/input/: input.cpp  input_binding.cpp  input_map.cpp
funkin/src/render/: render_viewport.cpp
funkin/src/render/gfx/: vk_context.cpp  vk_render.cpp
funkin/src/render/graphics/: gfx_context.cpp  gfx_render.cpp  gfx_surface.cpp  gfx_viewport.cpp  graphics_context.cpp  graphics_device.cpp  graphics_viewport.cpp
funkin/src/render/qt/: vk_surface.cpp  vk_viewport.cpp
